Mon Nov 03 00:46:06 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - Reduce the delay for the pop-up menu on the conversations button
	    to 250ms.

Mon Nov 03 00:36:53 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsBox.cpp:
	* src/QGaimAccountsBox.h:
	  - Our algorithm for truncating overly long account usernames in
	    the account combobox is now much smarter.

Sun Nov 02 17:06:14 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Idle times are now aligned on the far right of the buddy list
	    on all resolutions.

Sun Nov 02 16:53:09 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Small code tweak to turn 4 lines into 1.

Thu Oct 23 21:12:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - The Join Chat button actually works right now.

Thu Oct 23 21:09:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Made the groups in the buddy list bold.

Thu Oct 23 20:54:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Added support for showing group numbers in the buddy list.

Thu Oct 23 20:47:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimMainWindow.cpp:
	* src/QGaimMainWindow.h:
	* src/QGaimPrefsDialog.cpp:
	  - Modifying the buddy list prefs now actually updates the buddy list.

Thu Oct 23 20:30:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Shorten the number of visible lines in the text entry to 3.

Thu Oct 23 19:33:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - The Join Chat button should now work even when a node isn't
	    selected.

Thu Oct 23 19:31:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
